Ajustes de gramática e usabilidade

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <meta name="description" content="put something here">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">        
+    <link rel="stylesheet" href="css/style.css">
     <title>Eric Serafim</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
+    <link rel="manifest" href="/img/site.webmanifest">
+    <link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/img/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="Eric Serafim">
+    <meta name="application-name" content="Eric Serafim">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/img/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body class="bg-light">
@@ -18,8 +30,9 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarmain" aria-controls="navbarmain"
                 aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>              
             </button>
+
             <div class="collapse navbar-collapse" id="navbarmain">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
@@ -99,7 +112,7 @@
                         <i class="fas fa-leaf fa-2x text-info"></i>
                         <i class="fas fa-umbrella-beach fa-2x text-warning"></i>
                     </div>
-                    <div class="col-sm">
+                    <!-- <div class="col-sm">
                         <h6 class="text-muted-50 margin-top">Personality</h6>
                         <div class="row">
                             <div class="col-sm">
@@ -110,7 +123,7 @@
                                 <i class="fas fa-angry fa-2x text-muted-50"></i>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -135,7 +148,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">How I did?</h6>
+                                        <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
                                         <span class="badge badge-info">Html 5</span>
                                         <span class="badge badge-info">CSS 3</span>
@@ -144,13 +157,14 @@
                                         <br><br>Methods<br>
                                         <span class="badge badge-warning">Ideation</span>
                                         <span class="badge badge-warning">Design Thinking</span>
-                                        <span class="badge badge-warning">MVP</span>                                        
+                                        <span class="badge badge-warning">MVP</span>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">What I learned?</h6>
-                                        <p class="text-muted"> I figure out how I can use <span class="badge badge-info">Bootstrap</span> framework.<br>                                            
+                                        <h6 class="text-dark">What did I learn?</h6>
+                                        <p class="text-muted"> I figure out how I can use <span class="badge badge-info">Bootstrap</span>
+                                            framework.<br>
                                             Also, I was able to practice CSS and Javascript as well.
                                         </p>
                                     </div>
@@ -158,7 +172,8 @@
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
                                         <h6 class="text-dark">Results archieved</h6>
-                                        <p class="text-muted">I finished my online cover letter. It was very useful because I was able to offer a good way for people know more about me.
+                                        <p class="text-muted">I finished my online cover letter. It was very useful
+                                            because I was able to offer a good way for people know more about me.
                                         </p>
                                         Time<br>
                                         <p class="text-muted">3 days.</p>
@@ -166,12 +181,13 @@
                                 </div>
                             </div>
                         </div>
-                    </div>                    
-                    <a tabindex="0" class="btn btn-outline-primary btn-sm margin-20" role="button" data-toggle="popover" data-trigger="focus" title="You're here!" data-content="You're using this project right now!">More</a>
+                    </div>
+                    <a tabindex="0" class="btn btn-outline-primary btn-sm margin-20" role="button" data-toggle="popover"
+                        data-trigger="focus" title="You're here!" data-content="You're using this project right now!">More</a>
                 </div>
             </div>
 
-  <!--           <div class="col">
+            <!--           <div class="col">
                 <div class="card shadow-sm" style="width: 20rem;">
                     <div class="card-body">
                         <div id="project0" class="carousel slide" data-ride="carousel">
@@ -185,7 +201,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">How I did?</h6>
+                                        <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
                                         <span class="badge badge-info">Flutter</span>
                                         <span class="badge badge-info">Dart</span>
@@ -199,7 +215,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">What I learned?</h6>
+                                        <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted"> I learned to program <span class="badge badge-info">Kotlin</span>
                                             language and new design
                                             pattern.<br>
@@ -242,7 +258,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">How I did?</h6>
+                                        <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
                                         <span class="badge badge-info">Kotlin</span>
                                         <span class="badge badge-info">SQLite</span>
@@ -259,7 +275,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">What I learned?</h6>
+                                        <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted"> I learned to program <span class="badge badge-info">Kotlin</span>
                                             language and new design
                                             pattern.<br>
@@ -303,7 +319,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">How I did?</h6>
+                                        <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
                                         <span class="badge badge-info">Java Android</span>
                                         <span class="badge badge-info">SQLite</span>
@@ -321,7 +337,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">What I learned?</h6>
+                                        <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted"> In this project I learned <span class="badge badge-info">SQLite</span>
                                             and how
                                             <span class="badge badge-info">Firebase's features</span> working.<br>
@@ -362,7 +378,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">How I did?</h6>
+                                        <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
                                         <span class="badge badge-info">Java Android</span>
                                         <span class="badge badge-info">Firebase Database</span>
@@ -374,7 +390,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">What I learned?</h6>
+                                        <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted">In this project I could practice Firebase's features.
                                         </p>
                                     </div>
@@ -413,7 +429,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">How I did?</h6>
+                                        <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
                                         <span class="badge badge-info">C Sharp</span>
                                         <span class="badge badge-info">MVC</span>
@@ -425,7 +441,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">What I learned?</h6>
+                                        <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted">In this project I learned more about
                                             <span class="badge badge-info">C Sharp</span> and
                                             <span class="badge badge-info">MVC</span> as well.
@@ -464,7 +480,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">How I did?</h6>
+                                        <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
                                         <span class="badge badge-info">C Sharp</span>
                                         <span class="badge badge-info">HTTP Request</span>
@@ -474,7 +490,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">What I learned?</h6>
+                                        <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted">In this project I learned more about
                                             <span class="badge badge-info">Google Analytics API</span> and
                                             how I can create a DLL in C#.
@@ -512,7 +528,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">How I did?</h6>
+                                        <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
                                         <span class="badge badge-info">Delphi</span>
                                         <span class="badge badge-info">DLL</span>
@@ -522,7 +538,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">What I learned?</h6>
+                                        <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted">In this project I learned more about component in
                                             <span class="badge badge-info">Delphi</span>.
                                         </p>
@@ -558,7 +574,7 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">How I did?</h6>
+                                        <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
                                         <span class="badge badge-info">Delphi</span>
                                         <span class="badge badge-info">Data Access</span>
@@ -568,7 +584,7 @@
                                 </div>
                                 <div class="carousel-item">
                                     <div class="d-block w-100">
-                                        <h6 class="text-dark">What I learned?</h6>
+                                        <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted">In this project I learned how important is centralize
                                             operations.
                                         </p>
@@ -721,6 +737,7 @@
     <script src="/js/jquery-3.3.1.min.js"></script>
     <script src="/js/popper.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/mdb.min.js"></script>
     <script src="/js/main.js"></script>
 </body>
 
