* Alinhado os cards ao centro quando usuário está usando smartphone

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="row">
             <div class="col text-center">
                 <img src="img/avatar.jpg" width="200" alt="Eric profile photo" class="text-center rounded-circle border border-secondary" />
-                <h5 class="text-white">Hi, I'm Eric Serafim</h5>                
+                <h5 class="text-white">Hi, I'm Eric Serafim</h5>
                 <span class="text-muted-50">
                     I was born in Brazil a long time ago. <i class="far fa-smile text-muted-50"></i><br>
                     I've been working as Analyst and Developer for 16 years.
@@ -88,7 +88,7 @@
 
         <div class="row margin-top">
             <div class="col text-center">
-                <a href="#done" class="btn btn-primary call-action">                    
+                <a href="#done" class="btn btn-primary call-action">
                     <i class="fas fa-play-circle"></i>
                     Let's go!
                 </a>
@@ -96,13 +96,13 @@
         </div>
     </div>
 
-    <div id="done" class="container-fluid pd-sm cards-center">
+    <div id="done" class="container-fluid pd-sm">
         <h1 class="text-center text-dark">What have I done?</h1>
         <hr class="hr-dark">
 
         <div class="row">
             <div class="col">
-                <div class="card shadow-sm" style="width: 20rem;">
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <div id="project00" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
@@ -156,7 +156,7 @@
             </div>
 
             <!--           <div class="col">
-                <div class="card shadow-sm" style="width: 20rem;">
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <div id="project0" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
@@ -213,7 +213,7 @@
             </div> -->
 
             <div class="col">
-                <div class="card shadow-sm" style="width: 20rem;">
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <div id="project1" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
@@ -273,7 +273,7 @@
             </div>
 
             <div class="col">
-                <div class="card shadow-sm" style="width: 20rem;">
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <div id="project3" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
@@ -332,7 +332,7 @@
             </div>
 
             <div class="col">
-                <div class="card shadow-sm" style="width: 20rem;">
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <div id="project2" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
@@ -383,7 +383,7 @@
             </div>
 
             <div class="col">
-                <div class="card shadow-sm" style="width: 20rem;">
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <div id="project4" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
@@ -434,7 +434,7 @@
             </div>
 
             <div class="col">
-                <div class="card shadow-sm" style="width: 20rem;">
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <div id="project5" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
@@ -482,7 +482,7 @@
             </div>
 
             <div class="col">
-                <div class="card shadow-sm" style="width: 20rem;">
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <div id="project6" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
@@ -529,7 +529,7 @@
             </div>
 
             <div class="col">
-                <div class="card shadow-sm" style="width: 20rem;">
+                <div class="card shadow-sm">
                     <div class="card-body">
                         <div id="project7" class="carousel slide" data-ride="carousel" data-interval="false">
                             <ol class="carousel-indicators">
