--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                 <div class="progress position-relative">
                     <div class="progress-bar bg-success" role="progressbar" style="width: 95%" aria-valuenow="95"
                         aria-valuemin="0" aria-valuemax="100"></div>
-                    <div class="progress-bar-title">Desktop Developer</div>
+                    <div class="progress-bar-title">Desktop/Backend</div>
                 </div>
                 <div class="progress position-relative">
                     <div class="progress-bar bg-success" role="progressbar" style="width: 95%" aria-valuenow="95"
