--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     I've been working as Analyst and Developer for 16 years.
                     In this time I worked in different kinds of projects, such as, desktop application, mobile apps and
                     web solutions as well.<br>
-                    I've been using Scrum for more than 10 years. Also, I'm confortable with Agile and Design Thinking.<br><br>
+                    I've been using Scrum for more than 10 years. Also, I'm comfortable with Agile and Design Thinking.<br><br>
                     For more details about me and what I've done, please take a look below.
                 </span>
             </div>
