--- a/index.html
+++ b/index.html
@@ -632,9 +632,9 @@
                 <span class="badge badge-warning">Agile</span>
                 <span class="badge badge-warning">Analyst</span>
                 <span class="badge badge-warning">Enterprise Resourse Planning</span>
-                <span class="badge badge-warning">C#</span>
-                <span class="badge badge-warning">C# MVC</span>
-                <span class="badge badge-warning">C# API REST</span>
+                <span class="badge badge-warning">.Net Core</span>
+                <span class="badge badge-warning">.Net MVC</span>
+                <span class="badge badge-warning">.Net API REST</span>
                 <span class="badge badge-warning">Delphi</span>
                 <span class="badge badge-warning">Java Android</span>
                 <span class="badge badge-warning">Kotlin Android</span>
