--- a/index.html
+++ b/index.html
@@ -634,7 +634,7 @@
                 <span class="badge badge-warning">Enterprise Resourse Planning</span>
                 <span class="badge badge-warning">.Net Core</span>
                 <span class="badge badge-warning">.Net MVC</span>
-                <span class="badge badge-warning">.Net API REST</span>
+                <span class="badge badge-warning">.Net REST API</span>
                 <span class="badge badge-warning">Delphi</span>
                 <span class="badge badge-warning">Java Android</span>
                 <span class="badge badge-warning">Kotlin Android</span>
