--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                         <span class="badge badge-info">DAO</span>
                                         <span class="badge badge-info">Firebase Features</span>
                                         <span class="badge badge-info">Admob</span>
-                                        <span class="badge badge-info">Barcode Reading</span>
+                                        <span class="badge badge-info">Barcode Scanner</span>
                                         <br><br>Methods<br>
                                         <span class="badge badge-warning">Ideation</span>
                                         <span class="badge badge-warning">Prototyping</span>
