Fit some grammar mistakes

--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                 <h5 class="text-white">Hi, I'm Eric Serafim</h5>
                 <span class="text-muted-50">
                     I was born in Brazil a long time ago. <i class="far fa-smile text-muted-50"></i><br>
-                    I've been working as Analyst and Developer for 16 years.
+                    I have been working as Analyst and Developer for 16 years.
                     In this time I worked in different kinds of projects, such as, desktop application, mobile apps and
                     web solutions as well.<br>
-                    I've been using Scrum for more than 10 years. Also, I'm comfortable with Agile and Design Thinking.<br><br>
-                    For more details about me and what I've done, please take a look below.
+                    I have been using Scrum for more than 10 years. Also, I am comfortable with Agile and Design Thinking.<br><br>
+                    For more details about me and what I have done, please take a look below.
                 </span>
             </div>
         </div>
@@ -410,7 +410,7 @@
                                     <div class="d-block w-100">
                                         <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
-                                        <span class="badge badge-info">C Sharp</span>
+                                        <span class="badge badge-info">.Net</span>
                                         <span class="badge badge-info">MVC</span>
                                         <span class="badge badge-info">Own Auth</span>
                                         <span class="badge badge-info">Firebird Database</span>
@@ -422,7 +422,7 @@
                                     <div class="d-block w-100">
                                         <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted">In this project I learned more about
-                                            <span class="badge badge-info">C Sharp</span> and
+                                            <span class="badge badge-info">.Net</span> and
                                             <span class="badge badge-info">MVC</span> as well.
                                         </p>
                                     </div>
@@ -461,7 +461,7 @@
                                     <div class="d-block w-100">
                                         <h6 class="text-dark">How did I do it?</h6>
                                         Technologies<br>
-                                        <span class="badge badge-info">C Sharp</span>
+                                        <span class="badge badge-info">.Net</span>
                                         <span class="badge badge-info">HTTP Request</span>
                                         <br><br>Methods<br>
                                         <span class="badge badge-warning">Prototyping</span>
@@ -472,7 +472,7 @@
                                         <h6 class="text-dark">What did I learn?</h6>
                                         <p class="text-muted">In this project I learned more about
                                             <span class="badge badge-info">Google Analytics API</span> and
-                                            how I can create a DLL in C#.
+                                            how I can create a DLL in .Net.
                                         </p>
                                     </div>
                                 </div>
@@ -631,7 +631,7 @@
                 <span class="badge badge-warning">Scrum</span>
                 <span class="badge badge-warning">Agile</span>
                 <span class="badge badge-warning">Analyst</span>
-                <span class="badge badge-warning">Enterprise Resourse Planning</span>
+                <span class="badge badge-warning">Enterprise Resource Planning</span>
                 <span class="badge badge-warning">.Net Core</span>
                 <span class="badge badge-warning">.Net MVC</span>
                 <span class="badge badge-warning">.Net REST API</span>
@@ -704,6 +704,7 @@
         <div class="row">
             <div class="col-sm">
                 <h6 class="text-dark margin-top">Technologies</h6>
+                <span class="badge badge-warning">.Net Core</span>
                 <span class="badge badge-warning">Flutter</span>
                 <span class="badge badge-warning">Angular</span>
                 <span class="badge badge-warning">PWA</span>
