--- a/index.html
+++ b/index.html
@@ -704,17 +704,15 @@
         <div class="row">
             <div class="col-sm">
                 <h6 class="text-dark margin-top">Technologies</h6>
-                <span class="badge badge-warning">.Net Core</span>
-                <span class="badge badge-warning">Flutter</span>
-                <span class="badge badge-warning">Angular</span>
-                <span class="badge badge-warning">PWA</span>
+                <span class="badge badge-warning">.Net Core</span>                                
+                <span class="badge badge-warning">.Net</span>                
             </div>
             <div class="col-sm">
                 <h6 class="text-dark margin-top">Methods</h6>
                 <span class="badge badge-info">Clean Architecture</span>
-                <span class="badge badge-info">UX</span>
+                <span class="badge badge-info">Design Pattern</span>
                 <span class="badge badge-info">Lean Inception</span>
-                <span class="badge badge-info">Digital Marketing</span>
+                
             </div>
         </div>
     </div>
