--- a/index.html
+++ b/index.html
@@ -595,22 +595,22 @@
             <div class="col-sm">
                 <h6 class="text-muted-50 margin-top">Skills</h6>
                 <div class="progress position-relative">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 97%" aria-valuenow="97"
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90"
                         aria-valuemin="0" aria-valuemax="100"></div>
                     <div class="progress-bar-title">Analyst System</div>
                 </div>
                 <div class="progress position-relative">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 80%" aria-valuenow="80"
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 60%" aria-valuenow="60"
                         aria-valuemin="0" aria-valuemax="100"></div>
                     <div class="progress-bar-title">Mobile Developer</div>
                 </div>
                 <div class="progress position-relative">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 95%" aria-valuenow="95"
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 85%" aria-valuenow="85"
                         aria-valuemin="0" aria-valuemax="100"></div>
                     <div class="progress-bar-title">Desktop/Backend</div>
                 </div>
                 <div class="progress position-relative">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 95%" aria-valuenow="95"
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 90%" aria-valuenow="90"
                         aria-valuemin="0" aria-valuemax="100"></div>
                     <div class="progress-bar-title">Database</div>
                 </div>
@@ -643,6 +643,13 @@
                 <span class="badge badge-warning">Design Thinking</span>
                 <span class="badge badge-warning">GIT</span>
                 <span class="badge badge-warning">GIT Hub</span>
+                <span class="badge badge-warning">GIT Lab</span>
+                <span class="badge badge-warning">CI</span>
+                <span class="badge badge-warning">CD</span>
+                <span class="badge badge-warning">Docker</span>
+                <span class="badge badge-warning">Docker Compose</span>
+                <span class="badge badge-warning">Unit Tests</span>
+                <span class="badge badge-warning">Integrated Tests</span>                
             </div>
         </div>
 
